fix header overflow issue fix

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -103,15 +103,11 @@ span.icon.icon-search::before {
     padding: 20px;
   }
 
-  header nav[aria-expanded="true"] {
-    overflow: visible;
-    overflow-y: auto;
-  }
-
   header nav a:any-link {
     padding: 27px 10px;
     color: var(--global-color-pine-green);
     text-decoration: none;
+    font-weight: inherit;
   }
 
   header nav>div.nav-sections>ul>li.nav-drop>ul>li>a {
@@ -455,7 +451,7 @@ header nav .nav-sections ul>li>ul {
   header nav .nav-sections>ul>li>ul {
     display: none;
     position: relative;
-    animation: slide-down 200ms forwards; 
+    animation: slide-down 400ms forwards; 
   }
 
   header nav .nav-sections>ul>li[aria-expanded="true"]>ul {
@@ -474,7 +470,7 @@ header nav .nav-sections ul>li>ul {
 
   header nav .nav-sections>ul>li>ul>li {
     padding: 10px;
-    width: 592px;
+    width: 480px;
     margin: auto
   }
 
